[package]
name = "tele_tracker"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
nalgebra = "0.32.2"
# nalgebra = { version = "0.32.2", features = ["approx"] }

[build-dependencies]
cc = "1.0.79"
bindgen = "0.65.1"

[profile.release]
strip = true
lto = true
# debug = false
#opt-level = 'z'
opt-level = 2
panic = 'abort'
# strip = true
# lto = true
#opt-level = 'z'
# panic = 'abort'
#codegen-units = 1